// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render GPIO_DISPLAY correctly with High 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "GPIO_DISPLAY",
      "values": Object {
        "value": 1,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "Low",
        "High",
      ]
    }
    value={1}
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  Low
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  High
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE geyPxt"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render GPIO_DISPLAY correctly with Low 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "GPIO_DISPLAY",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "Low",
        "High",
      ]
    }
    value={0}
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  Low
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE geyPxt"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  High
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render GPIO_DISPLAY correctly with default value to undefiend 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "GPIO_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "Low",
        "High",
      ]
    }
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  Low
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  High
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;
